2003-04-01  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-multiple-buffers-default): Modified to nicely
	interact with bbdb-display-records-1.
	(bbdb-display-records-1): Honor bbdb-multiple-buffers by calling
	bbdb-pop-up-bbdb-buffer. 

2003-03-31  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-display-records-1): 
	* lisp/bbdb-com.el (bbdb-mail-abbrev-expand-hook):
	Trying to fix the problem with with-output-to-temp-buffer caused
	several new bugs, thus we do a roll back to the old code.
	
2003-03-28  Waider  <waider@waider.ie>

	* lisp/bbdb-com.el: Call bbdb-complete-name-hooks after name completion

2003-03-27  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-com.el (bbdb-mail-abbrev-expand-hook): save-excursion
	to avoid getting into the *BBDB* buffer accidently.

2003-03-15  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-display-records-1): erase buffer when
	appending, since we are redisplaying the records, not just one
	(with-output-to-temp-buffer was doing that before ...) 
	(bbdb-multiple-buffers-default): Default/example function for *BBDB*
	buffer name generation for Gnus, VM, and compositions.
	(bbdb-pop-up-bbdb-buffer): code move to bbdb-multiple-buffers-default

2003-03-13  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb-gnus.el:
	* lisp/bbdb-hooks.el:
	* lisp/bbdb.el: Droped support for GNUS versions <= 3.14

	* lisp/bbdb-hooks.el (bbdb-header-start): There is no
	gnus-subject-mode, its called gnus-summary-mode.

	* lisp/bbdb.el (bbdb-display-records-1): removed call to
	bbdb-pop-up-bbdb-buffer to avoid problems with special-display-*,
	still we are not back to the old behavior, i.e. if calling BBDB
	from an frame without *BBDB* buffer while other frames are
	displaying it we will not get it on the current frame, but that is
	how it used to be. 

2003-03-11  Robert Fenk  <Robert.Fenk@gmx.de>

	* lisp/bbdb.el (bbdb-frob-mode-line): show the BBDB buffer name.

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-show-all-recipients):